package patterns.structural.composite;
import java.math.BigDecimal;

public interface Fiyatlanabilir {

    BigDecimal getFiyat();
}
